# animate_diff

./: .gitignore  README.md  __init__.py  config.yaml  generate.py  pyproject.toml  requirements.txt  train.py
data/: input.txt  prompts.yaml
scripts/: check_repo.py
utils/: __init__.py  prompt_utils.py  text_processing.py  video_utils.py
