[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "animatediff-pipeline"
version = "0.1.0"
description = "AnimateDiff text-to-video pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "diffusers>=0.28.0",
    "transformers>=4.38.0",
    "accelerate>=0.27.0",
    "compel>=2.0.2",
    "einops>=0.7.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.9",
    "Pillow>=10.0.0",
    "moviepy>=1.0.3",
    "tqdm>=4.66.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.1",
    "huggingface-hub>=0.22.0",
    "safetensors>=0.4.2",
]

[project.scripts]
animatediff-generate = "generate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true